# quickshare

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
src/: form.html  main.rs
