[package]
name = "quickshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "tokio", "http1"], default-features = false }
clap = { version = "4.4.8", features = ["derive", "std", "env", "help", "usage"], default-features = false }
tokio = { version = "1.34.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }

[profile.smol]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
lto = true
