[package]
name = "quickshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = { version = "0.1.13", default-features = false, features = ["help"] }
axum = { version = "0.8.1", features = ["multipart", "tokio", "http1"], default-features = false }
http-body = "1.0.1"
tokio = { version = "1.34.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }

[profile.smol]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
lto = true
